--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "redux-dialog",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A Higher Order Component using react-redux to keep dialog state in a Redux store",
-  "main": "src/index.js",
+  "main": "build/redux.dialog.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node_modules/.bin/webpack-dev-server --config webpack.config.js --content-base examples/ --progress"
+    "start": "node_modules/.bin/webpack-dev-server --config webpack.config.js --content-base examples/ --progress",
+    "build": "NODE_ENV=production webpack --config webpack.production.config.js --progress"
+
   },
   "author": "Vlad Suciu",
   "license": "ISC",
