--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node_modules/.bin/webpack-dev-server --config webpack.config.js --content-base examples/ --progress",
     "build": "NODE_ENV=production webpack --config webpack.production.config.js --progress"
-
   },
   "author": "Vlad Suciu",
   "license": "ISC",
   "dependencies": {
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-modal": "^1.4.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2"
   },
