Change package name, prep for npm packaging

--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "redux-dialog",
+  "name": "redux-dialog-extended",
   "version": "0.1.0",
   "description": "A Higher Order Component using react-redux to keep dialog state in a Redux store",
   "main": "build/redux.dialog.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/suciuvlad/redux-dialog.git"
+    "url": "https://github.com/JakeDluhy/redux-dialog.git"
   },
-  "homepage": "https://github.com/suciuvlad/redux-dialog",
-  "bugs": "https://github.com/suciuvlad/redux-dialog/issues",
+  "homepage": "https://github.com/JakeDluhy/redux-dialog",
+  "bugs": "https://github.com/JakeDluhy/redux-dialog/issues",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node_modules/.bin/webpack-dev-server --config webpack.config.js --content-base examples/ --progress",
-    "build": "NODE_ENV=production webpack --config webpack.production.config.js --progress",
-    "dist": "babel src --out-dir dist"
+    "build": "NODE_ENV=production webpack --config webpack.production.config.js --progress && babel src --out-dir dist"
   },
   "author": "Vlad Suciu",
   "license": "ISC",
@@ -54,5 +53,9 @@
     "react-component",
     "modal",
     "dialog"
+  ],
+  "files": [
+    "build",
+    "src"
   ]
 }
