--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node_modules/.bin/webpack-dev-server --config webpack.config.js --content-base examples/ --progress",
-    "build": "NODE_ENV=production webpack --config webpack.production.config.js --progress && babel src --out-dir dist",
+    "build": "NODE_ENV=production webpack --config webpack.production.config.js --progress",
     "prepublish": "npm run build"
   },
   "author": "Vlad Suciu",
