--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "enzyme-to-json": "^3.2.2",
     "html-webpack-plugin": "^2.30.1",
+    "jest": "^21.2.1",
+    "redux-mock-store": "^1.3.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.5"
   },
