--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
   "homepage": "https://github.com/suciuvlad/redux-dialog",
   "bugs": "https://github.com/suciuvlad/redux-dialog/issues",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "yarn run jest",
     "start": "node_modules/.bin/webpack-dev-server --config webpack.config.js --content-base examples/ --progress",
     "build": "NODE_ENV=production webpack --config webpack.production.config.js --progress",
     "prepublish": "npm run build"
+  },
+  "jest": {
+    "setupFiles": [
+      "raf/polyfill"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   },
   "author": "Vlad Suciu",
   "license": "MIT",
@@ -36,6 +44,7 @@
     "enzyme-to-json": "^3.2.2",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.1",
+    "raf": "^3.4.0",
     "redux-mock-store": "^1.3.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.5"
