--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "author": "Vlad Suciu",
   "license": "MIT",
-  "dependencies": {
+  "peerDependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-modal": "^3.1.5",
@@ -47,7 +47,12 @@
     "raf": "^3.4.0",
     "redux-mock-store": "^1.3.0",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.5"
+    "webpack-dev-server": "^2.9.5",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-modal": "^3.1.5",
+    "react-redux": "^5.0.6",
+    "redux": "^3.5.2"
   },
   "tags": [
     "react",
