--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "build": "NODE_ENV=production webpack --config webpack.production.config.js --progress",
     "prepublish": "npm run build"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "jest": {
     "setupFiles": [
       "raf/polyfill"
@@ -43,16 +48,19 @@
     "enzyme-adapter-react-16": "^1.1.0",
     "enzyme-to-json": "^3.2.2",
     "html-webpack-plugin": "^2.30.1",
+    "husky": "^1.0.0-rc.8",
     "jest": "^21.2.1",
+    "prettier": "^1.13.5",
+    "pretty-quick": "^1.6.0",
     "raf": "^3.4.0",
-    "redux-mock-store": "^1.3.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-modal": "^3.1.5",
     "react-redux": "^5.0.6",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-mock-store": "^1.3.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.5"
   },
   "tags": [
     "react",
