--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "redux-dialog",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "A Higher Order Component using react-redux to keep dialog state in a Redux store",
-  "main": "build/redux.dialog.js",
+  "main": "dist/redux.dialog.js",
+  "module": "dist/redux.dialog.esm.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/suciuvlad/redux-dialog.git"
@@ -11,8 +12,9 @@
   "bugs": "https://github.com/suciuvlad/redux-dialog/issues",
   "scripts": {
     "test": "yarn run jest",
-    "start": "node_modules/.bin/webpack-dev-server --config webpack.config.js --content-base examples/ --progress",
-    "build": "NODE_ENV=production webpack --config webpack.production.config.js --progress",
+    "build": "NODE_ENV=production rollup -c",
+    "docs:dev": "docz dev",
+    "prettier": "prettier --config ./.prettierrc --write",
     "prepublish": "npm run build"
   },
   "husky": {
@@ -35,32 +37,35 @@
     "react-dom": "^16.0.0",
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.6",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2 || ^4.0.0-0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
+    "@babel/core": "^7.2.0",
+    "@babel/plugin-transform-object-assign": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "docz": "^0.12.16",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
     "enzyme-to-json": "^3.2.2",
-    "html-webpack-plugin": "^2.30.1",
     "husky": "^1.0.0-rc.8",
-    "jest": "^21.2.1",
-    "prettier": "^1.13.5",
+    "jest": "^23.6.0",
+    "prettier": "^1.15.3",
     "pretty-quick": "^1.6.0",
     "raf": "^3.4.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-modal": "^3.4.5",
-    "react-redux": "^5.0.6",
-    "redux": "^3.5.2",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
     "redux-mock-store": "^1.3.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.5"
+    "rollup": "^0.67.4",
+    "rollup-plugin-babel": "^4.1.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-uglify": "^6.0.0"
   },
   "tags": [
     "react",
